--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Markdown-Editor</title>
     <link rel="stylesheet" type="text/css"
-    href="./body.css">
-    <link rel="stylesheet" type="text/css"
     href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+    href="./custom.css">
   </head>
   <body>
     <div id="container"></div>
